tests/rosetta/out/C/arrays.error
cc: exit status 1
/tmp/arrays.c: In function ‘_mochi_main’:
/tmp/arrays.c:95:25: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
   95 |   printf("%s\n", "a = " + listStr(tmp7));
      |                  ~~~~~~ ^ ~~~~~~~~~~~~~
      |                  |        |
      |                  char *   char *
/tmp/arrays.c:103:25: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  103 |   printf("%s\n", "a = " + listStr(tmp8));
      |                  ~~~~~~ ^ ~~~~~~~~~~~~~
      |                  |        |
      |                  char *   char *
/tmp/arrays.c:109:25: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  109 |   printf("%s\n", "s = " + listStr(s));
      |                  ~~~~~~ ^ ~~~~~~~~~~
      |                  |        |
      |                  char *   char *
/tmp/arrays.c:118:25: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  118 |   printf("%s\n", "s = " + listStr(s));
      |                  ~~~~~~ ^ ~~~~~~~~~~
      |                  |        |
      |                  char *   char *
/tmp/arrays.c:127:25: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  127 |   printf("%s\n", "a = " + listStr(tmp18));
      |                  ~~~~~~ ^ ~~~~~~~~~~~~~~
      |                  |        |
      |                  char *   char *
/tmp/arrays.c:128:25: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  128 |   printf("%s\n", "s = " + listStr(s));
      |                  ~~~~~~ ^ ~~~~~~~~~~
      |                  |        |
      |                  char *   char *
/tmp/arrays.c:145:25: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  145 |   printf("%s\n", "s = " + listStr(s));
      |                  ~~~~~~ ^ ~~~~~~~~~~
      |                  |        |
      |                  char *   char *
/tmp/arrays.c:159:25: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  159 |   printf("%s\n", "a = " + listStr(tmp30));
      |                  ~~~~~~ ^ ~~~~~~~~~~~~~~
      |                  |        |
      |                  char *   char *
/tmp/arrays.c:160:25: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  160 |   printf("%s\n", "s = " + listStr(s));
      |                  ~~~~~~ ^ ~~~~~~~~~~
      |                  |        |
      |                  char *   char *
/tmp/arrays.c:171:25: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  171 |   printf("%s\n", "s = " + listStr(s));
      |                  ~~~~~~ ^ ~~~~~~~~~~
      |                  |        |
      |                  char *   char *
